// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/display/Loader should render with custom width and height without crashing 1`] = `
<div
  class="simple-loader"
  data-testid="oval-loading"
  style="display: flex; padding: 3px;"
>
  <svg
    aria-label="Loading..."
    data-testid="oval-svg"
    height="50px"
    stroke="#F3F4F6"
    viewBox="-20 -20 42 42"
    width="50px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <g
        stroke-width="2"
        transform="translate(1 1)"
      >
        <circle
          cx="0"
          cy="0"
          r="20"
          stroke="#F3F4F633"
          stroke-opacity=".5"
          stroke-width="2"
        />
        <path
          d="M20 0c0-9.94-8.06-20-20-20"
        >
          <animatetransform
            attributeName="transform"
            dur="1s"
            from="0 0 0"
            repeatCount="indefinite"
            to="360 0 0"
            type="rotate"
          />
        </path>
      </g>
    </g>
  </svg>
</div>
`;

exports[`components/display/Loader should render with custom width and height without crashing 2`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "visibility",
  "2": "padding",
  "_importants": {
    "display": "",
    "padding": "",
    "visibility": undefined,
  },
  "_length": 3,
  "_onChange": [Function],
  "_values": {
    "display": "flex",
    "padding": "3px",
    "padding-bottom": "3px",
    "padding-left": "3px",
    "padding-right": "3px",
    "padding-top": "3px",
    "visibility": "visible",
  },
}
`;

exports[`components/display/Loader should render with default props without crashing 1`] = `
<div
  class="simple-loader"
  data-testid="oval-loading"
  style="display: flex; padding: 3px;"
>
  <svg
    aria-label="Loading..."
    data-testid="oval-svg"
    height="40px"
    stroke="#F3F4F6"
    viewBox="-20 -20 42 42"
    width="40px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <g
        stroke-width="2"
        transform="translate(1 1)"
      >
        <circle
          cx="0"
          cy="0"
          r="20"
          stroke="#F3F4F633"
          stroke-opacity=".5"
          stroke-width="2"
        />
        <path
          d="M20 0c0-9.94-8.06-20-20-20"
        >
          <animatetransform
            attributeName="transform"
            dur="1s"
            from="0 0 0"
            repeatCount="indefinite"
            to="360 0 0"
            type="rotate"
          />
        </path>
      </g>
    </g>
  </svg>
</div>
`;

exports[`components/display/Loader should render with default props without crashing 2`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "visibility",
  "2": "padding",
  "_importants": {
    "display": "",
    "padding": "",
    "visibility": undefined,
  },
  "_length": 3,
  "_onChange": [Function],
  "_values": {
    "display": "flex",
    "padding": "3px",
    "padding-bottom": "3px",
    "padding-left": "3px",
    "padding-right": "3px",
    "padding-top": "3px",
    "visibility": "visible",
  },
}
`;

exports[`components/display/Loader should render with default props without crashing 3`] = `
<div
  class="centered-loader-wrapper MuiBox-root css-1lhu1y1"
>
  <div
    class="simple-loader"
    data-testid="oval-loading"
    style="display: flex; padding: 3px;"
  >
    <svg
      aria-label="Loading..."
      data-testid="oval-svg"
      height="40px"
      stroke="#F3F4F6"
      viewBox="-20 -20 42 42"
      width="40px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <g
          stroke-width="2"
          transform="translate(1 1)"
        >
          <circle
            cx="0"
            cy="0"
            r="20"
            stroke="#F3F4F633"
            stroke-opacity=".5"
            stroke-width="2"
          />
          <path
            d="M20 0c0-9.94-8.06-20-20-20"
          >
            <animatetransform
              attributeName="transform"
              dur="1s"
              from="0 0 0"
              repeatCount="indefinite"
              to="360 0 0"
              type="rotate"
            />
          </path>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`components/display/Loader should render with default props without crashing 4`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "padding",
  "2": "align-items",
  "3": "justify-content",
  "4": "visibility",
  "_importants": {
    "align-items": "",
    "display": "",
    "justify-content": "",
    "padding": "",
    "visibility": undefined,
  },
  "_length": 5,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "display": "flex",
    "justify-content": "center",
    "padding": "8em 0px",
    "padding-bottom": "8em",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "8em",
    "visibility": "visible",
  },
}
`;
